# seds-rs

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  validate.sh
.github/workflows/: rust.yml
docs/: SEDS.md
eds/SEDSDoTForSANA/: README.md  ccsds.sois.modops.xml  ccsds.sois.seds.xml  ccsds.sois.subnetwork.xml  dod.milbus.milstd1553.xml  esa.ecss.milstd1553.xml
eds/basic/: datatypeset.xml  enumerateddatatype.xml
eds/test/: mission_parameters.json  otc.xml  seds-core-semantics.xsd  seds-extension-semantics.xsd  seds.xsd  simplified_spacepacket.xml  simplified_spacepacket_bacn.xml  simplified_spacepacket_galois.xml  test_container.xml  test_datasheet.xml  test_datatypes.xml  test_eds.xml  test_multi_datasheet.xml  test_multi_package.xml  test_package.xml  test_qualified_container.xml  test_resolved.xml
examples/: expression.rs  macro.rs  parse.rs  req_coverage.rs
examples/digital-icd/: Cargo.toml  README.md  build.rs
examples/digital-icd/src/: main.rs
seds_macro/: Cargo.toml
seds_macro/src/: lib.rs
src/: datasheet.rs  deserialize.rs  lib.rs  main.rs  package.rs
src/codegen/: context.rs  convert.rs  convert_rust.rs  dependency.rs  diagram.rs  doc.rs  format.rs  mod.rs
src/codegen/frame_diagram/: drawable.rs  format.rs  frame.rs  minify.rs  mod.rs  style.rs
src/eds/: ast.rs  mod.rs  raw.rs  resolve.rs  resolved.rs
src/expr/: mod.rs
src/parse/: deserialize.rs  mod.rs
tests/: 0a_parse.rs  0b_ast.rs  3_10_containers.rs  3_2_eds.rs  3_3_structure.rs  3_5_packages.rs  3_6_datatypes.rs  3_7_scalar.rs  codegen.rs  common.rs  context.rs  dependency.rs  expr.rs  parse.rs  resolve.rs  spacepacket.rs
