[package]
name = "seds-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
evalexpr = "11.0.0"
heck = "0.4.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
regex = "1.9.1"
serde = {version = "1.0.171", features = ["derive"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.103"
spacepackets = "0.6.0"
syn = "2.0.27"

[dev-dependencies]
clap = "4.3.19"
walkdir = "2.3.3"
deku = "0.16.0"
seds_macro = {path = "seds_macro"}
spacepackets = "0.6.0"
