[package]
name = "seds-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = {version = "4.3.19", features = ["derive"]}
evalexpr = "11.0.0"
glob = "0.3.1"
heck = "0.4.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
regex = "1.9.1"
serde = {version = "1.0.171", features = ["derive"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.103"
syn = "2.0.27"
nalgebra = "0.32.3"
svg = "0.13.1"
svgcleaner = "0.9.5"
svgdom = "0.10.5"

[dev-dependencies]
walkdir = "2.3.3"
deku = "0.16.0"
seds_macro = {path = "seds_macro"}
spacepackets = "0.6.0"
rand = "0.8.5"

[[bin]]
name = "seds-codegen"
path = "src/bin/main.rs"