[package]
name = "digital-icd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
doc-images = []

[package.metadata.docs.rs]
features = ["doc-images"]

[dependencies]
seds-rs = { path = "../../."}
seds_macro = {path = "../../seds_macro"}
deku = "0.16.0"
embed-doc-image = "0.1"
